--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,8 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.2.0'
     //GreenDAO
     implementation 'org.greenrobot:greendao:3.2.2'
+    //SVG
+    implementation 'com.caverock:androidsvg-aar:1.4'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.2'
