--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/MyAppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".view.activity.classtable.ClassTableActivity"></activity>
+        <activity android:name=".view.activity.coursetable.CourseTableActivity"></activity>
         <activity android:name=".view.activity.account.LoginActivity" />
         <activity android:name=".view.activity.personal.PersonalActivity" />
         <activity
