--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,10 @@ dependencies {
     implementation 'com.caverock:androidsvg-aar:1.4'
     //ShadowLayout
     implementation 'com.lijiankun24:shadowlayout:1.1.0'
+    //RoundImg
+    implementation 'com.github.SheHuan:NiceImageView:1.0.5'
+    //
+    implementation 'com.github.jdsjlzx:LRecyclerView:1.5.4.3'
 
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
