--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,3 +65,8 @@ dependencies {
 
 
 }
+greendao {
+    schemaVersion 1 //数据库版本号
+    daoPackage 'com.shg.keyebang.db'// 设置DaoMaster、DaoSession、Dao 包名
+    targetGenDir 'src/main/java'//设置DaoMaster、DaoSession、Dao目录
+}
