--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,8 @@
         android:theme="@style/MyAppTheme"
         android:usesCleartextTraffic="true">
         <activity android:name=".view.activity.coursedetail.SecondHandBookActivity"></activity>
-        <activity android:name=".view.activity.CourseList.SearchCourseActivity" />
-        <activity android:name=".view.activity.CourseList.ChooseMainCourseActivity" />
+        <activity android:name=".view.activity.courseList.SearchCourseActivity" />
+        <activity android:name=".view.activity.courseList.ChooseMainCourseActivity" />
         <activity android:name=".view.activity.coursedetail.CourseDetailActivity" />
         <activity android:name=".view.activity.account.LoginActivity" />
         <activity
