--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:supportsRtl="true"
         android:theme="@style/MyAppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".view.activity.coursedetail.SecondHandBookActivity"></activity>
+        <activity android:name=".view.activity.profile.UpdatePersonalInfoActivity"></activity>
+        <activity android:name=".view.activity.coursedetail.SecondHandBookActivity" />
         <activity android:name=".view.activity.courseList.SearchCourseActivity" />
         <activity android:name=".view.activity.courseList.ChooseMainCourseActivity" />
         <activity android:name=".view.activity.coursedetail.CourseDetailActivity" />
@@ -33,12 +34,12 @@
             android:name="cn.bmob.v3.util.BmobContentProvider"
             android:authorities="com.shg.keyebang.BmobContentProvider" />
     </application>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-
     <uses-permission android:name="android.permission.INTERNET" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
 </manifest>
